k8s/app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  labels:
    app: custom-app-test
spec:
  containers:
  - name: custom-app
    image: custom-app:latest
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 5000
    volumeMounts:
    - name: app-logs
      mountPath: /app/logs
    - name: app-config
      mountPath: /app/config
  volumes:
  - name: app-logs
    emptyDir: {}
  - name: app-config
    configMap:
      name: app-config
