k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: custom-app
    role: web
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
