k8s/app-statefulset-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-stateful
spec:
  clusterIP: None
  selector:
    app: custom-app-stateful
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
